# isomcpu

./: .dockerignore  .env.example  .gitignore  Dockerfile  GEMINI.md  README.md  compose.yaml  deploy.sh  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
app/: config.py  database.py  dependencies.py  main.py
app/models/: __init__.py  customer.py  payment.py  quotation.py  quotation_item.py  repair_media.py  repair_request.py  repair_status_log.py  technician.py
app/routers/: liff.py  line_webhook.py  payment.py  repairs.py  tech.py  tech_api.py
app/schemas/: customer.py  payment.py  quotation.py  quotation_item.py  repair_request.py  technician.py
app/services/: line_service.py  line_templates.json  media_service.py  payment_service.py  quotation_service.py  repair_service.py
app/templates/: liff.html  tech.html
app/templates/liff/: banner.html  head.html  modals.html  scripts.html  view_index.html  view_notfound.html  view_queue.html  view_return.html  view_track.html
app/templates/tech/: modals.html  nav.html  scripts.html  view_login.html  view_mywork.html  view_overview.html  view_profile.html  view_queue_all.html  view_tech_manage.html
app/utils/: auth.py
docs/: API_DOCS.md
frontend/liff/: config.js  style.css
frontend/tech/: config.js  mywork.css  overview.css  queue-all.css  style.css
scripts/: db_fix.py  migrate_status.py
